--- a/games.html
+++ b/games.html
@@ -5,6 +5,18 @@
 	<meta charset="UTF-8">
 	<title>Games - Game Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<style>
+		.pool{
+			width: 100%;
+			height: 250px;
+			display: flex;
+			flex-direction: row;
+		}
+		.pool1{
+			width: 50%;
+			height: 250px;
+		}
+	</style>
 </head>
 <body>
 	<div id="background">
@@ -23,7 +35,7 @@
 							<a href="games.html" id="menu3">staking</a>
 						</li>
 						<li>
-							<a href="blog.html" id="menu4">whitepage</a>
+							<a href="https://jaymie-mourning.gitbook.io/thecroods-world" id="menu4" target="_blank">whitepage</a>
 						</li>
 						<li>
 							<a href="about.html" id="menu5">team</a>
@@ -35,33 +47,33 @@
 		<div id="body">
 			<div>
 				<div>
-					<div class="blog">
-						<div class="content">
+					<div class="games" style="display: flex;flex-direction: column;">
+						<!-- <div class="content">
+							<h3>best games</h3>
 							<ul>
 								<li>
-									<div class="header">
-										<b>This is just a place holder</b><span><a href="#">july 2012</a><a href="#">name</a></span>
-									</div>
-									<div class="article">
-										<a href="#" class="figure"><img src="images/blog1.jpg" alt=""></a>
-										<p>
-											You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the Forum.<br><a href="blog.html" class="more">read more</a>
-										</p>
-									</div>
+									<a href="#" class="figure"><img src="images/best-game1.jpg" alt=""></a> <span><a href="#">This is just a place holder</a></span>
 								</li>
 								<li>
-									<div class="header">
-										<b>This is just a place holder</b><span><a href="#">july 2012</a><a href="#">name</a></span>
-									</div>
-									<div class="article">
-										<a href="" class="figure"><img src="images/blog1.jpg" alt=""></a>
-										<p>
-											What’s more, they’re absolutely free! <br> You can do a lot with them. You can modify them. You can modify them. You can use them to design websites for clients, so long as you agree with the <a href="#about/terms">Terms of Use</a>.<br><a href="blog.html" class="more">read more</a>
-										</p>
-									</div>
+									<a href="#" class="figure"><img src="images/best-game2.jpg" alt=""></a> <span><a href="#">This is just a place holder</a></span>
+								</li>
+								<li>
+									<a href="#" class="figure"><img src="images/best-game1.jpg" alt=""></a> <span><a href="#">This is just a place holder</a></span>
+								</li>
+								<li>
+									<a href="#" class="figure"><img src="images/best-game2.jpg" alt=""></a> <span><a href="#">This is just a place holder</a></span>
 								</li>
 							</ul>
+						</div> -->
+						<div class="pool">
+							<div class="pool1">1</div>
+							<div class="pool1">2</div>
 						</div>
+						<div class="pool">
+							<div class="pool1">3</div>
+							<div class="pool1">4</div>
+						</div>
+						
 						
 					</div>
 				</div>
