--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<a href="games.html" id="menu3">staking</a>
 						</li>
 						<li>
-							<a href="blog.html" id="menu4">whitepage</a>
+							<a href="https://jaymie-mourning.gitbook.io/thecroods-world" id="menu4" target="_blank">whitepage</a>
 						</li>
 						<li>
 							<a href="about.html" id="menu5">team</a>
