--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 							<a href="games.html" id="menu3">staking</a>
 						</li>
 						<li class="selected">
-							<a href="blog.html" id="menu4">whitepage</a>
+							<a href="https://jaymie-mourning.gitbook.io/thecroods-world" id="menu4" target="_blank">whitepage</a>
 						</li>
 						<li>
 							<a href="about.html" id="menu5">team</a>
