--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Game Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<script src="./js/my.js"></script>
 </head>
 <body>
 	<div id="background">
@@ -12,6 +13,7 @@
 			<div>
 				<div>
 					<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+					<button onclick="initWallet()" id="select-address" class="wallet">Connect Wallet</button>
 					<ul>
 						<li class="selected">
 							<a href="index.html" id="menu1">home</a>
