--- a/media.html
+++ b/media.html
@@ -6,9 +6,10 @@
 	<title>Media - Game Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-	<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">\
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
 	<script src="./js/jquery.js" charset="utf-8" type="text/javascript"></script>
 	<script src="./js/bootstrap.min.js" charset="utf-8" type="text/javascript"></script>
+	<script src="./js/my.js"></script>
 	<style>
 		.tabone{
 			width: 100%;
@@ -34,6 +35,7 @@
 			<div>
 				<div>
 					<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+					<button onclick="initWallet()" id="select-address" class="wallet">Connect Wallet</button>
 					<ul style="box-sizing: content-box;webkit-box-sizing: content-box;">
 						<li>
 							<a href="index.html" id="menu1">home</a>
@@ -79,7 +81,7 @@
 								text-align: center;
 								margin-top: 5px;" placeholder="min is 1NFT  max is 10NFT">
 								<div><img src="./images/+.png" alt="" style="width:50%;cursor: pointer;"></div></div>
-							<div><img src="./images/Mint.png" alt="" style="width: 13%;cursor: pointer;"></div>
+							<div><img onclick="claim()" src="./images/Mint.png" alt="" style="width: 13%;cursor: pointer;"></div>
 
 						</div>
 						<div>
