--- a/media.html
+++ b/media.html
@@ -807,7 +807,7 @@ $("a[href='#home']").click(async function(e){
 	if(urls){
 		$("#taba1").empty();
 		for(var i =0;i<urls.length;i++){
-			$("#taba1").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image"></div>'); 
+			$("#taba1").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image" style="border-radius: 20px;"></div>'); 
 		}
 	}
 });
@@ -820,7 +820,7 @@ $("a[href='#profile']").click(async function(e){
 	if(urls){
 		$("#taba2").empty();
 		for(var i =0;i<urls.length;i++){
-			$("#taba2").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image"></div>'); 
+			$("#taba2").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image" style="border-radius: 20px;"></div>'); 
 		}
 	}
 });
@@ -833,7 +833,7 @@ $("a[href='#messages']").click(async function(e){
 	if(urls){
 		$("#taba3").empty();
 		for(var i =0;i<urls.length;i++){
-			$("#taba3").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image"></div>'); 
+			$("#taba3").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image" style="border-radius: 20px;"></div>'); 
 		}
 	}
 });
@@ -846,7 +846,7 @@ $("a[href='#settings']").click(async function(e){
 	if(urls){
 		$("#taba4").empty();
 		for(var i =0;i<urls.length;i++){
-			$("#taba4").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image"></div>'); 
+			$("#taba4").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image" style="border-radius: 20px;"></div>'); 
 		}
 	}
 });
@@ -859,7 +859,7 @@ $("a[href='#five']").click(async function(e){
 	if(urls){
 		$("#taba5").empty();
 		for(var i =0;i<urls.length;i++){
-			$("#taba5").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image"></div>'); 
+			$("#taba5").append('<div class="image-li"><img src='+urls[i]+' alt="Responsive image" style="border-radius: 20px;"></div>'); 
 		}
 	}
 });
