--- a/games.html
+++ b/games.html
@@ -31,6 +31,10 @@
     justify-content: space-around;
 	height: 70px;
 	line-height: 70px;
+	text-align: center;
+		}
+		.poolas{
+			display: contents;
 		}
 	</style>
 </head>
@@ -68,12 +72,12 @@
 						<div class="pool">
 							<div class="pool1">
 							<div class="pool2">
-								<div><img src="./images/Class1.png" alt="" style="height:100%"></div>
-								<div>NFT LEVEL1(Normal)</div>
+								<div class="poolas"><img src="./images/Class1.png" alt="" style="height:100%;max-width: 100%;"></div>
+								<div class="poolas">NFT LEVEL1(Normal)</div>
 							</div>
 							<div class="pool2" style="height: 40px;line-height: 40px;">
-								<div>APR :</div>
-								<div><p style="display: contents;">25555% </p> <img src="./images/S.png" alt="" style="height: 50%;"></div>
+								<div style="width: 20%;">APR :</div>
+								<div><p style="display: contents;">25555% </p> <img src="./images/S.png" alt="" style="height: 50%;max-width: 100%;"></div>
 
 							</div>
 							<div class="pool2" style="height: 40px;line-height: 40px;">
@@ -86,19 +90,19 @@
 								</div>
 							</div>
 							<div class="pool2">
-								<div onclick="staking()"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;"> </div>
-								<div onclick="staking()"><img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer;"></div>
+								<div onclick="staking()" class="poolas"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;max-width: 100%;"> </div>
+								<div onclick="staking()" class="poolas"><img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer;max-width: 100%;"></div>
 							</div>	
 
 							</div>
 							<div class="pool1">
 								<div class="pool2">
-									<div><img src="./images/Class2.png" alt="" style="height:100%"></div>
-									<div>NFT LEVEL2(Common)</div>
+									<div class="poolas"><img src="./images/Class2.png" alt="" style="height:100%;max-width: 100%;"></div>
+									<div class="poolas">NFT LEVEL2(Common)</div>
 								</div>
 								<div class="pool2" style="height: 40px;line-height: 40px;">
-									<div>APR :</div>
-									<div><p style="display: contents;">55555% </p> <img src="./images/S.png" alt="" style="height: 50%;"></div>
+									<div style="width: 20%;">APR :</div>
+									<div><p style="display: contents;">55555% </p> <img src="./images/S.png" alt="" style="height: 50%;max-width: 100%;"></div>
 	
 								</div>
 								<div class="pool2" style="height: 40px;line-height: 40px;">
@@ -111,8 +115,8 @@
 									</div>
 								</div>
 								<div class="pool2">
-									<div onclick="staking()"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;"> </div>
-									<div onclick="staking()"> <img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer;"></div>
+									<div onclick="staking()" class="poolas"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;max-width: 100%;"> </div>
+									<div onclick="staking()" class="poolas"> <img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer;max-width: 100%;"></div>
 								</div>	
 	
 								</div>
@@ -120,12 +124,12 @@
 						<div class="pool">
 							<div class="pool1">
 								<div class="pool2">
-									<div><img src="./images/Class3.png" alt="" style="height:100%"></div>
-									<div>NFT LEVEL3(Rare)</div>
+									<div class="poolas"><img src="./images/Class3.png" alt="" style="height:100%;max-width: 100%;"></div>
+									<div class="poolas">NFT LEVEL3(Rare)</div>
 								</div>
 								<div class="pool2" style="height: 40px;line-height: 40px;">
-									<div>APR :</div>
-									<div><p style="display: contents;">175555% </p> <img src="./images/S.png" alt="" style="height: 50%;"></div>
+									<div style="width: 20%;">APR :</div>
+									<div><p style="display: contents;">175555% </p> <img src="./images/S.png" alt="" style="height: 50%; max-width: 100%;"></div>
 	
 								</div>
 								<div class="pool2" style="height: 40px;line-height: 40px;">
@@ -138,19 +142,19 @@
 									</div>
 								</div>
 								<div class="pool2">
-									<div onclick="staking()"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;"> </div>
-									<div onclick="staking()"><img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer;"></div>
+									<div onclick="staking()" class="poolas"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;max-width: 100%;"> </div>
+									<div onclick="staking()" class="poolas"><img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer; max-width: 100%;"></div>
 								</div>	
 	
 								</div>
 								<div class="pool1">
 									<div class="pool2">
-										<div><img src="./images/Class4.png" alt="" style="height:100%"></div>
-										<div>NFT LEVEL4(Super Rare)</div>
+										<div class="poolas"><img src="./images/Class4.png" alt="" style="height:100%;max-width: 100%;"></div>
+										<div class="poolas">NFT LEVEL4(Super Rare)</div>
 									</div>
 									<div class="pool2" style="height: 40px;line-height: 40px;">
-										<div>APR :</div>
-										<div><p style="display: contents;">305555% </p> <img src="./images/S.png" alt="" style="height: 50%;"></div>
+										<div style="width: 20%;">APR :</div>
+										<div><p style="display: contents;">305555% </p> <img src="./images/S.png" alt="" style="height: 50%;max-width: 100%;"></div>
 		
 									</div>
 									<div class="pool2" style="height: 40px;line-height: 40px;">
@@ -163,8 +167,8 @@
 										</div>
 									</div>
 									<div class="pool2">
-										<div onclick="staking()"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;"> </div>
-										<div onclick="staking()"><img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer;"></div>
+										<div onclick="staking()" class="poolas"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;max-width: 100%;"> </div>
+										<div onclick="staking()" class="poolas"><img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer;max-width: 100%;"></div>
 									</div>	
 		
 									</div>
@@ -172,12 +176,12 @@
 						<div class="pool">
 							<div class="pool1">
 								<div class="pool2">
-									<div><img src="./images/Class5.png" alt="" style="height:100%"></div>
-									<div>NFT LEVEL5(Legendary)</div>
+									<div class="poolas"><img src="./images/Class5.png" alt="" style="height:100%;max-width: 100%;"></div>
+									<div class="poolas">NFT LEVEL5(Legendary)</div>
 								</div>
 								<div class="pool2" style="height: 40px;line-height: 40px;">
-									<div>APR :</div>
-									<div><p style="display: contents;">575555% </p> <img src="./images/S.png" alt="" style="height: 50%;"></div>
+									<div style="width: 20%;">APR :</div>
+									<div><p style="display: contents;">575555% </p> <img src="./images/S.png" alt="" style="height: 50%; max-width: 100%;"></div>
 	
 								</div>
 								<div class="pool2" style="height: 40px;line-height: 40px;">
@@ -190,8 +194,8 @@
 									</div>
 								</div>
 								<div class="pool2">
-									<div onclick="staking()"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;"> </div>
-									<div onclick="staking()"><img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer;"></div>
+									<div onclick="staking()" class="poolas"> <img src="./images/Approve.png" alt="" style="height: 100%;cursor: pointer;max-width: 100%;"> </div>
+									<div onclick="staking()" class="poolas"><img src="./images/HARVEST.png" alt="" style="height: 100%;cursor: pointer;max-width: 100%;"></div>
 								</div>	
 	
 								</div>
